# Chess

./: .gitignore  Makefile  README.md
ChessEngine/: board  main
ChessEngine/BoardGUI/: board.cpp  board.h  main.cpp  piece.cpp  piece.h  window.cpp  window.h
src/: CMakeLists.txt  eval.sh
src/BoardGUI/: board.cpp  board.hpp  main.cpp  piece.cpp  piece.hpp  window.cpp  window.hpp
src/res/pieces/: bp.png:Zone.Identifier
src/tests/: test_fenToBoard.cpp  test_move_calculation.cpp
